# dolphindb-rust-api

dolphindb-rust/: Cargo.toml  build.rs
dolphindb-wrapper/: CMakeCache.txt  CMakeLists.txt
dolphindb-wrapper/src/: wrapper.cpp
